# Open3D-PointNet2-Semantic3D

./: .gitignore  LICENSE  README.md  accept_rate.json  bench.py  benchmark.py  colorize.py  config.json  dataset_statistics.ipynb  default.json  downsample.ipynb  downsample.py  eval_prediction.ipynb  experience1.json  experience2.json  experience3.json  interpolate.ipynb  interpolate.py  interpolate_knn.py  interpolate_voxel.py  kdtree.ipynb  kitti.py  kitti_predict.py  kitti_visualize.py  model.py  predict.py  preprocess.py  renamer.py  requirements.txt  scannet.json  semantic.json  semantic_dataset.py  semantic_no_color.json  train.py  train_full.py  train_multi.py  train_old.py  train_rework.py  visu.py  visu_color.py  (+2 more)
adaptive_sampling/: convert_folder_to_npz.sh  convert_to_npz.py  main.cpp
dataset/: data_preprocess.ipynb  dataset_statistics.ipynb  decode_color.ipynb  downloadAndExtractSem8.sh  downloadAndExtractSem8_test.sh  downloadAndExtractSem8_train.sh  downsample.py  kitti_dataset.py  scannet.py  semantic.py  semantic_color.py  semantic_data_full_adaptive  semantic_data_short_adaptive  semantic_data_short_orig  semantic_dataset.py  semantic_rework.py
dataset/kitti_raw/: raw_data_downloader.sh
dataset/semantic_raw/: download_semantic3d.sh  semantic3D_files.csv
down_sample/: CMakeLists.txt  convert_folder_to_npz.sh  convert_to_npz.py  down_sample.cpp  preprocess.cpp
interpolate/: CMakeLists.txt  interpolate.cpp  main.cpp
interpolation/: main.cpp
interpolation_sem3D/: CMakeLists.txt  eigen_print.cpp  interpolate.sh  interpolate_and_export_labels.sh  main.cpp  readme.md
models/: model.py  model_color.py  pointnet2_rework.py  pointnet2_sem_seg.py
preprocess/: CMakeLists.txt  convert_folder_to_npz.sh  preprocess.cpp  preprocess.sh
preprocessing_sem3D/: convert_to_npz.py  main.cpp  preprocess.sh
tf_ops/: CMakeLists.txt  FindTensorFlow.cmake  open3d.cmake  open3d_builder.cmake.in  test_interpolate.py  test_tf_ops.py  tf_grouping.cpp  tf_grouping.py  tf_grouping_g.cu  tf_interpolate.cpp  tf_interpolate.py  tf_interpolate_op_test.py  tf_sampling.cpp  tf_sampling.py  tf_sampling_compile.sh  tf_sampling_g.cu
tf_ops/grouping/: tf_grouping.cpp  tf_grouping.py  tf_grouping_compile.sh  tf_grouping_op_test.py
tf_ops/interpolation/: interpolate.cpp  tf_interpolate.cpp  tf_interpolate.py  tf_interpolate_compile.sh  tf_interpolate_op_test.py
tf_ops/sampling/: tf_sampling.py  tf_sampling_compile.sh
tf_ops/test/: query_ball_point.cpp  selection_sort.cpp
util/: metric.py  point_cloud_util.py  pointnet_util.py  provider.py  tf_util.py
utils/: eulerangles.py  metric.py  pc_util.py  plyfile.py  point_cloud_util.py  pointnet_util.py  provider.py  scene_util.py  tf_util.py
utils/3d_balls/: render_balls_so.cpp  show3d_balls.py
