cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11")
project(interpolation)
find_package(PCL 1.7 REQUIRED COMPONENTS common io visualization)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(interpolate main.cpp)
target_link_libraries(interpolate ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
list(REMOVE_ITEM PCL_LIBRARIES "-lvtkproj4")