cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11")
project(preprocess)
find_package(PCL 1.6 REQUIRED COMPONENTS common io visualization)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(preprocess preprocess.cpp)
target_link_libraries(preprocess ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
list(REMOVE_ITEM PCL_LIBRARIES "-lvtkproj4")
